--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,67 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.footerDiv {
+  background: #db4444;
+  color: white;
+  padding: 50px;
+}
+
+.exclusiveText, .supportText, .accountText, .subscribeText, .qucklinkText{
+  margin-bottom: 20px;
+}
+
+.footerInputDiv {
+  width: 200px;
+  height: 50px;
+  border: 1.5px white solid;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+.footerInput {
+  width: 125px;
+  height: 45px;
+  border: none;
+  background: #db4444;
+  color: white;
+}
+
+.footerInput:focus{
+  outline: none;
+}
+
+.footerInput::placeholder {
+  color: #e78d8d;
+  text-align: start;
+  padding: 10px;
+}
+
+.firstBlock > strong {
+  font-weight: 500;
+}
+
+.imgs{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.storesDiv{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+/* Custom styles */
+
+.fw-400{
+  font-weight: 400;
 }
