--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
 .footerDiv {
   background: #db4444;
   color: white;
@@ -59,6 +64,33 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.headSearchInput{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  height: 30px;
+  background: #F5F5F5;
+  border: none;
+  border-radius: 5px;
+}
+
+.headSearchInput::placeholder{
+  font-size: 13px;
+  text-align: center;
+}
+
+.navbarElements{
+  width: 80vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 50px;
+}
+
+
 
 /* Custom styles */
 
