product page added, small fixes, function addToCart fixed

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@ a{
 .cursor-pointer{
   cursor: pointer;
 }
+
+.redBlock{
+    width: 30px;
+    height: 60px;
+    background-color: #DB4444;
+    border: none;
+    border-radius: 5px;
+}
