--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ a{
   font-weight: 400;
 }
 
+.fw-600{
+  font-weight: 600;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -28,6 +32,43 @@ a{
     border-radius: 5px;
 }
 
+.whiteBlock{
+  width: 50px;
+  height: 50px;
+  background: white;
+  color: black;
+  font-weight: 600;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+}
+
 .w-80px{
   width: 80px;
+}
+
+.w-600px{
+  width: 600px;
+}
+
+.h-200px{
+  height: 200px;
+}
+
+.w-350px{
+  width: 350px;
+}
+
+.fs-90px{
+  font-size: 90px;
+}
+
+.ff-tnr{
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.bg-lightGray{
+  background: #f3f5f7;
 }
